<resources>
    <string name="app_name">L09 Problem Statement</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="song_title">Song Title</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">insert</string>
    <string name="show_list">show list</string>
    <string name="shows_all_songs_with_5_stars">shows all songs with 5 stars</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="enter_singers_name_here">Enter singers\' name here</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="cancel">cancel</string>
    <string name="update">update</string>
    <string name="delete">delete</string>

</resources>